# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

import("//build/package.gni")

executable("material_sandbox") {
  output_name = "filament_material_sandbox"

  sources = [
    "fuchsia_main.cc",
    # "app/CameraManipulator.cpp",
    # "app/Cube.cpp",
    # "app/FilamentApp.cpp",
    # "app/IBL.cpp",
    # "app/IcoSphere.cpp",
    # "app/Image.cpp",
  ]

  deps = [
    "../filament",
    # "//garnet/public/fidl/fuchsia.ui.scenic",
    # "//garnet/public/fidl/fuchsia.ui.viewsv1",
    # "//garnet/public/lib/fidl/cpp",
    # "//garnet/public/lib/fsl",
    # "//garnet/public/lib/fxl",
    # "//garnet/public/lib/ui/view_framework:view_provider",
    # "//third_party/skia",
    # "//topaz/examples/ui/lib:skia_view",
    # "//zircon/public/lib/async-loop-cpp",
    # "//zircon/public/lib/trace-provider",
  ]
}

package("filament_material_sandbox") {
  package_name = "filament_material_sandbox"

  deps = [
    ":material_sandbox",
  ]

  binary = "filament_material_sandbox"
}
