# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("image_headers_config") {
  include_dirs = [ "include" ]
}

source_set("image_headers") {
  public_configs = [ ":image_headers_config" ]

  include_dirs = [ "src" ]

  sources = [
    # Public headers.
    "include/image/ColorTransform.h",
    "include/image/Image.h",

    # Sources.
    "src/Image.cpp",
  ]
}
