# Copyright 2018 The Flutter Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

config("math_config") {
  include_dirs = [ "include" ]
}

source_set("math") {
  public_configs = [ ":math_config" ]

  sources = [
    # Public headers.
    "include/math/TMatHelpers.h",
    "include/math/TQuatHelpers.h",
    "include/math/TVecHelpers.h",
    "include/math/compiler.h",
    "include/math/fast.h",
    "include/math/half.h",
    "include/math/mat2.h",
    "include/math/mat3.h",
    "include/math/mat4.h",
    "include/math/norm.h",
    "include/math/quat.h",
    "include/math/scalar.h",
    "include/math/vec2.h",
    "include/math/vec3.h",
    "include/math/vec4.h",
  ]
}
