# Copyright 2018 The Fuchsia Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.

template("matc_gen") {
  assert(defined(invoker.sources))

  action_foreach(target_name) {
    tool_target = "//third_party/filament/tools/matc($host_toolchain)"

    matc_out_dir = get_label_info(tool_target, "root_out_dir")

    script = "$matc_out_dir/matc"

    sources = invoker.sources

    inputs = invoker.sources

    outputs = [
      "$target_gen_dir/{{source_name_part}}.inc.h",
    ]

    deps = [
      tool_target,
    ]
  }
}
